# ChessBot

./: .gitignore  LICENSE  Pipfile  README.md  bot.py  pyproject.toml
bot/: bot_client.py  settings.example.json
bot/cogs/: chess.py  cog_example.py  error_handler.py  help.py  owner.py
bot/orm/: db.py  db_credentials.example.json  models.py
