[tool.poetry]
name = "ChessBot"
version = "0.1.0"
description = ""
authors = ["John Victor <johnvictorfs@gmail.com>", "Guilherme Vasconcelos"]

[tool.poetry.dependencies]
python = "^3.6"
peewee = "^3.8"
psycopg2-binary = "^2.7"
"discord.py" = "^1.2"
python-chess = "^0.28.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.18"
flake8 = "^3.7"
autopep8 = "^1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
